# nrf52_baremetal_rust

./: Cargo.toml  build.rs  linker.ld  run.sh
src/: demo.cc  main.rs
